--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,19 +1,31 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
   font-size: 48px;
   font-weight: 900;
+  margin: 20px;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  align-self: center;
+  justify-self: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+  margin: 0;
+  padding: 0;
+  
 }
 
 a {
