--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  margin: auto;
 }
 
 img {
@@ -10,6 +14,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+}
+
+.fruits {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  gap: 52px;
+  width: 200px;
+  height: auto;
 }
 
 /* do not edit this footer */
